--- a/exercises/3_4/css/style.css
+++ b/exercises/3_4/css/style.css
@@ -3,8 +3,9 @@
 }
 
 body{
-    background-color: #0F094F;
+    background-color: #026EB3;
     color: #F7F7F7;
+    text-align: center;
 }
 
 article{
@@ -34,4 +35,38 @@ header ul{
 header li{
     display: inline;
     margin-right: 15px;
+}
+
+h3{
+    margin-top: 15px;
+}
+
+h2{
+    margin-bottom: 32px;
+}
+
+table{
+    margin: 30px auto;
+}
+
+td{
+    padding: 5px 15px;
+}
+
+.card {
+    display: inline-block;
+    background-color: ivory;
+    color: #212121;
+    width: 48%;
+    border-radius: 15px;
+    padding: 32px;
+}
+
+.card img{
+    border: solid 16px #026EB3;
+}
+
+.text-center{
+    width: 100%;
+    text-align: center;
 }
