--- a/exercises/3_4/css/style.css
+++ b/exercises/3_4/css/style.css
@@ -38,7 +38,7 @@ header li{
 }
 
 h3{
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 h2{
@@ -49,24 +49,63 @@ table{
     margin: 30px auto;
 }
 
+footer{
+    background-color: #212121;
+    height: 128px;
+    margin-top: 30px;
+}
+
+footer p{
+    padding-top: 64px;
+}
+
 td{
     padding: 5px 15px;
 }
 
-.card {
-    display: inline-block;
-    background-color: ivory;
-    color: #212121;
-    width: 48%;
-    border-radius: 15px;
-    padding: 32px;
+.content{
+    padding: 30px;
 }
 
-.card img{
+aside, .card{
+    background-color: ivory;
+    border-radius: 15px;
+    padding: 32px;
+    display: inline-block;
+    text-align: center;
+    color: #212121;
+    vertical-align: text-top;
+}
+
+aside{
+    text-align: center;
+    width: 20%;
+    margin: 30px 0 0 0;    
+}
+
+.card {
+    width: 60%;
+}
+
+img.portifolio{
     border: solid 16px #026EB3;
 }
 
-.text-center{
-    width: 100%;
-    text-align: center;
+img.icon{
+    display: inline-block;
+    border-radius: 100%;
+    border: solid 8px #026EB3;
+    width: 128px;
+    margin-bottom: -48px;
+}
+
+section>p{
+    display: inline-block;
+    width: 70%;
+    text-align: left;
+    margin-left: 18px;
+}
+
+#facts{
+    padding-bottom: 128px;
 }
