--- a/exercises/3_4/css/style.css
+++ b/exercises/3_4/css/style.css
@@ -6,6 +6,7 @@ body{
     background-color: #026EB3;
     color: #F7F7F7;
     text-align: center;
+    font-family: 'Titan One', cursive;
 }
 
 article{
@@ -23,6 +24,9 @@ header{
 
 header h1{
     color: #026EB3;
+    font-size: 36px;
+    background-color: #F7F7F7;
+    padding: 16px 32px;
     position: absolute;
     top: 530px;
     left: 30px;
@@ -83,10 +87,6 @@ aside{
     margin: 30px 0 0 0;    
 }
 
-.card {
-    width: 60%;
-}
-
 img.portifolio{
     border: solid 16px #026EB3;
 }
@@ -108,4 +108,9 @@ section>p{
 
 #facts{
     padding-bottom: 128px;
+}
+
+#refs li{
+    display: inline;
+    padding: 5px 10px;
 }
